foi adicionado a primeira pagina do projeto

--- a/inicio.html
+++ b/inicio.html
@@ -10,7 +10,7 @@
 <body id="back">
     <main>
         <span class="textozada">O menino que se alimentava de pesadelos</span>
-        <img class="start" src="/imagens/5ABE.gif" alt="">
+        <a href="index.html"><img class="start" src="/imagens/5ABE.gif" alt=""></a>
     </main>
 </body>
 </html>
