Foi adcionado mais paginas e concertado o modo nortuno

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="estilos.css">
 </head>
+<div class="botaozinho"><button class="botao" onclick="troca();"></button> <p>Ativar/Desativar modo noturno</p> </div>
 <body id="corpo">
-    <button class="botao" onclick="troca();"> </button>
     <div id="conteudo">
 
     </div>
