--- a/testes.html
+++ b/testes.html
@@ -7,28 +7,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>  
-        <section>
-            <p>Certa vez, não muito distante da floresta e nem muito perto dela, havia uma bruxa, qual era famosa por realizar desejos impossiveis de serem feitos por humanos, porem a bruxa só realizaria esse desejo se tivesse algo em troca dele.
-                <br>
-                <br>
-                Não tão longe e nem tão perto da bruxa, havia um menino, solitário e que ansiava mais do que nunca pela felicidade.
-                O mesmo menino colecionava pesadelos, todos os dias o garoto era alimentado por lembranças ruins do passado que o assombrava repetinamente e todos os dias ele tinha medo de dormir.
-                <br>
-                <br>
-                Cansado de ser assombrado pelos seus pesadelos, e sabendo que havia uma bruxa o mesmo resolveu que talvez ela o poderia ajudar
-                <br>
-                <br>
-                Então o menino adentrou a floresta e foi em direção a bruxa, foi aí que percebeu dois caminhos:
-                <br>
-                <br>
-                Um levava ele até a Bruxa e o outro a pequena casa do lenhador</p>
+<body>
+    <section>  
+        <p>
+            A bruxa, impaciente com sua indecisão, perguntou em um tom doce” Meu caro, o que achas de trocarmos de sonhos ? Poderias livrar-te de seus horríveis pesadelos e ficar com meus doce sonhos.” A bruxa sorri com ternura.
+            Opçao; aceitar
+            <br>
+            O garoto, inclina o rosto com curiosidade.
+        </p>
         </section>
+        <img class="imagemzada" src="imagens/" alt="">
+        <br>
+<br>
 
-            <img class="imagemzada" src="imagens/caminho floresta.png" alt="">
-        <div class="opcaos">
-            <div class="optxt"><button class="options" onclick="carregarConteudo(pagina2)">opção 1</button><p>Ir até a bruxa</p></div>
-            <div class="optxt"><button class="options" onclick="carregarConteudo(pagina3)">opção 2</button><p>Ir até o lenhador</p></div>
-        </div>
+<div class="opcaos">
+    <div class="optxt"><button class="options" onclick="carregarConteudo(pagina10)">opção 1</button><p>Aceitar</p></div>
+    <div class="optxt"><button class="options" onclick="carregarConteudo(pagina12)">opção 2</button><p>Recusar</p></div>
+    </div>  
+</div>
 </body>
 </html>
