--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Livro jogo</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="estilos.css">
 </head>
-<div class="botaozinho"><button class="botao" onclick="troca();"></button> <p>Ativar/Desativar modo noturno</p> </div>
-<body id="corpo">
-    <div id="conteudo">
-
-    </div>
-    <script src="js/javascript.js"></script>
-    
+<body id="back">
+    <main>
+        <span class="textozada">O menino que se alimentava de pesadelos</span>
+        <a href="Inicioindex.html"><img class="start" src="/imagens/5ABE.gif" alt=""></a>
+    </main>
 </body>
 </html>
