--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>começo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="back">
     <main>
         <span class="textozada">O menino que se alimentava de pesadelos</span>
-        <a href="Inicioindex.html"><img class="start" src="/imagens/5ABE.gif" alt=""></a>
+        <a href="Escolhas.html"><img class="start" src="/imagens/5ABE.gif" alt=""></a>
     </main>
 </body>
 </html>
