corrigindo erros imagens

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body id="back">
     <main>
         <span class="textozada">O menino que se alimentava de pesadelos</span>
-        <a href="Escolhas.html"><img class="start" src="/imagens/5ABE.gif" alt=""></a>
+        <a href="Escolhas.html"><img class="start" src="imagens/5ABE.gif" alt=""></a>
     </main>
 </body>
 </html>
