--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="back">
-    <main>
-        <span class="textozada">O menino que se alimentava de pesadelos</span>
-        <a href="Escolhas.html"><img class="start" src="imagens/5ABE.gif" alt=""></a>
+    <main class="textozinho">
+        <span class="textozada"><p>O menino que se alimentava de pesadelos</p></span>
+        <a href="Escolhas.html"><span class="play"><p>Começar</p></span></a>
     </main>
 </body>
 </html>
